--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -541,7 +541,7 @@
  UaCH.108.t: "Sultan Muhammad Rebels"
  UaCH.108.d: "We have received a letter from §GSultan Muhammad§!, crown prince of §YAjam§!. He states that he is the true successor of §GShah Rukh§!, and has declared his rebellion against us, with the full intention of capturing the Timurid Throne. This is intolerable, and he must be quickly defeated.\n\n§RIf the Timurid Succession Crisis starts before we defeat Sultan Muhammad, the war will be replaced by the succession crisis wars. Historically, though Shah Rukh was able to defeat Ajam, he could not track down and kill Sultan Muhammad before his own death, and Sultan Muhammad remained a significant contender in the Timurid Succession Crisis§!"
  UaCH.108.a: "We will crush this upstart."
-  uach_let_them_do_their_thing: "Shiite Conversions"
+ uach_let_them_do_their_thing: "Shiite Conversions"
  uach_reform.1000.t: "Shia Imams prosletyze"
  uach_reform.1000.d: "The Shia faith, while a minority in our country, has recently become a thorn in our side. Their prosletyzing has raised eyebrows in our court, especially among the Ulama. Inaction will certainly create opposition to us in our court. However, cracking down on this conversion will draw the ire of the new converts."
  uach_reform.1000.a: "Let the Shiites be"
@@ -758,3 +758,6 @@
  uach_legit_to_defoff_lvl3:0"Low legitimacy"
  uach_legit_to_defoff_lvl2:0"Abysmal legitimacy"
  uach_legit_to_defoff_lvl1:0"No legitimacy"
+ 
+ lost_control_of_herat:0"Doesn't own or control Herat"
+ lost_control_of_samarkand:0"Doesn't own or control Samarkand"
