--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -110,7 +110,6 @@
  intercept_shah_rukhs_body_desc:0"Our Empress-Dowager has fallen into the traitors hands!We should mount a rescue operation, and if we could gain possession of §GShah Rukh's§! corpse in the meantime, that would be extremely 'fortunate'.\n\nCurrently her captors from @[event_target_name.uach_holder_of_sr.GetTag]§Y[event_target_name.uach_holder_of_sr.GetName]§! are en route to §O[event_target_name.uach_holder_of_sr.Capital.GetCapitalName]§!"
  uach_where_is_waldo_rukh:0"We are in posession of §GShah Rukh's§! corpse."
  
- 
  UaCH.18.t: "A Chance to Return"
  UaCH.18.d: "Grave news! §GSultan Muhammad§!, upon hearing of §GShah Rukh's§! death, marches east, retaking §YAjam§! and becoming the Timurid Emperor of §YFars§!. He rewarded the surviving nobles of §YIsfahan§!, and many nobles of other regions defected to him. Whilst §YIsfahan§! enjoys a tax relief, other regions suffered immensely, with §YYazd§! being heavily taxed, with its emirs being frequently replaced."
  UaCH.18.a: "I will not be denied!"
@@ -211,14 +210,14 @@
  UaCH.35.d: "The Empire after the death of §GShah Rukh§! fell into a chaotic succession. While most of the fighting has died down by now, the ripples are still felt everywhere. §G$RULER$§! has attempted to resolve the issues between the various factions and emirs, even going as far as alienating his own son §GAbdal-Aziz§!. Though it seems all of this was in vain, as even someone as loyal as §GAbu Sa'id§! seems to have developed new ideas. Previously posted on the northern front, he abandoned his post, and gathered a small number of clansmen to raid the city of Samarkand."
  UaCH.35.a: "Alas, ambition is the enemy of man."
  
- UaCH.36.t: "Gawhar Shad under fire"
- UaCH.36.d: "§GShah Rukh's§! dowager empress, his first consort §GGawhar Shad§! has always played a prominent part in our internal politics. While undoubtebly loyal to his husband, there is little doubt she has taken an active hand in the succession crisis unfolding after his death. Even though most of the Princes are blood-related, none would miss an opportunity to capture her, if only to prove his legitimacy. And now, like a gift from heavens, she has fallen into our hands."
- UaCH.36.a: "Ensnare her!"
+ UaCH.148.t:0 "Gawhar Shad under fire"
+ UaCH.148.d:0 "§GShah Rukh's§! dowager empress, his first consort §GGawhar Shad§! has always played a prominent part in our internal politics. While undoubtebly loyal to his husband, there is little doubt she has taken an active hand in the succession crisis unfolding after his death. Even though most of the Princes are blood-related, none would miss an opportunity to capture her, if only to prove his legitimacy. And now, like a gift from heavens, she has fallen into our hands."
+ UaCH.148.a:0 "Ensnare her!"
  
- UaCH.37.t: "The Fate of Gawhar Shad"
- UaCH.37.d: "§GGawhar Shad§! has always been an ambitious woman. Since early young age, she actively worked behind the screens to meddle in politics, supporting her choice of heir's rather than his husbands. Old age did not really change this fact, and it is obvious that she has had her hand in the current events. Now that we have her in custody, it might be prudent to solve this nuisance once and for all..."
- UaCH.37.a: "She cannot be trusted alive."
- UaCH.37.b: "She's just and old woman."
+ UaCH.149.t:0 "The Fate of Gawhar Shad"
+ UaCH.149.d:0 "§GGawhar Shad§! has always been an ambitious woman. Since early young age, she actively worked behind the screens to meddle in politics, supporting her choice of heir's rather than his husbands. Old age did not really change this fact, and it is obvious that she has had her hand in the current events. Now that we have her in custody, it might be prudent to solve this nuisance once and for all..."
+ UaCH.149.a:0 "She cannot be trusted alive."
+ UaCH.149.b:0 "She's just and old woman."
  UaCH.38.t: "Supplies running out"
  UaCH.38.d: "Due to the advance of the front, and the constant raids from the surrounding tribes, we find ourselves unable to resupply from home. Even through the horses can still graze, the soldiers are finding increasingly hard to forage. The population also began to hide whatever food they manage to get, making the situation even worse."
  UaCH.38.a: "Find supplies by any means neccessary."
@@ -261,37 +260,37 @@
  uach_tenth_opms:0 "Up to a tenth of our territory will gain independence and join the §YTimurid Succession Crisis§!."
  UaCH.43.safe: "At least we have a new [Root.Monarch.GetTitle] to take charge..."
  
- UaCH.44.t: "The Influence of Gawhar Shad"
- UaCH.44.d: "Despite the end of Gawhar Shad's regency for Shah Rukh, her influence is still strong, with her favoured grandson still recieving the most backing from the military and nobility, and many emirs in the regions she resides in siding with her. As such, she has felt it to be her right to offer us a hand in governing our realm. This is in all likelihood a power move, but if we decline, those who support her will certainly turn against us..."
- UaCH.44.a:0 "So it will be, mother of the realm..."
+ UaCH.153.t: "The Influence of Gawhar Shad"
+ UaCH.153.d: "Despite the end of Gawhar Shad's regency for Shah Rukh, her influence is still strong, with her favoured grandson still recieving the most backing from the military and nobility, and many emirs in the regions she resides in siding with her. As such, she has felt it to be her right to offer us a hand in governing our realm. This is in all likelihood a power move, but if we decline, those who support her will certainly turn against us..."
+ UaCH.153.a:0 "So it will be, mother of the realm..."
  estate_nobles_the_eternal_regency:0 "The Eternal Regency"
  estate_nobles_the_eternal_regency_desc:0 "Gawhar Shad has become the ruler of our realm in all but name, with the military enforcing her status as the puppeteer of our ruler."
  gawhar_shad_agendas_if_own:0 "If we own the province in which §YGawhar Shad§! resides, we will recieve special agendas from her relating to the §YTimurid Succession Crisis§!."
- UaCH.44.b:0 "How about no?"
+ UaCH.153.b:0 "How about no?"
  gawhar_shad_rebels:0 "§YGawhar Shad§! will incite the nobility and military to rebel in the future, causing the following immediate effects:"
  
- UaCH.45.t: "Gawhar Shad's Demands"
- UaCH.45.d: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and while they seem reasonable, the outcome of agreeing to such actions is yet to be seen."
- UaCH.45.a: "Let us restore stability."
+ UaCH.150.t: "Gawhar Shad's Demands"
+ UaCH.150.d: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and while they seem reasonable, the outcome of agreeing to such actions is yet to be seen."
+ UaCH.150.a: "Let us restore stability."
  uach_restore_stability_or_rebellion:0 "We must increase our stability to §G+1§! in a year, or there will be a rebellion."
- UaCH.45.b: "Let us show our might."
+ UaCH.150.b: "Let us show our might."
  uach_win_a_war_or_rebellion:0 "We must win a war in a year, or there will be a rebellion."
- UaCH.45.c:0 "Let us attempt to restore some amount of prosperity."
+ UaCH.150.c:0 "Let us attempt to restore some amount of prosperity."
  uach_dev_a_prov_or_rebellion:0 "We must develop a province in a year, or there will be a rebellion."
 
- UaCH.46.t: "Aftermath of the Empress-Dowager's Demands"
- UaCH.46.d1: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and we have fulfilled them. Let us see the outcome."
- UaCH.46.d2: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and we have managed to fail her demands, upsetting her and her supporters."
- UaCH.46.a: "At least she is satisified..."
+ UaCH.151.t: "Aftermath of the Empress-Dowager's Demands"
+ UaCH.151.d1: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and we have fulfilled them. Let us see the outcome."
+ UaCH.151.d2: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and we have managed to fail her demands, upsetting her and her supporters."
+ UaCH.151.a: "At least she is satisified..."
  uach_restoration_of_stability: "Restoration of Stability"
  desc_uach_restoration_of_stability: ""
  uach_onwards_to_glory: "Onwards to Glory"
  desc_uach_onwards_to_glory: ""
- UaCH.46.b: "Oh dear..."
+ UaCH.151.b: "Oh dear..."
 
- UaCH.47.t: "The Schemeing Dowager"
- UaCH.47.d: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and, seeing that she has no influence on [Root.Monarch.GetName], has decided to use her influence to incite rebellion."
- UaCH.47.a: "So, this is how she treats us!"
+ UaCH.152.t: "The Schemeing Dowager"
+ UaCH.152.d: "The empress dowager §GGawhar Shad§! has taken up residence in our city. While many see this as strenghtening our claim to the throne, those who know of her know that this may be just another scheme in her book. She has made multiple demands to our ruler, and, seeing that she has no influence on [Root.Monarch.GetName], has decided to use her influence to incite rebellion."
+ UaCH.152.a: "So, this is how she treats us!"
  
  UaCH.49.t: "Abdal-Latif complies"
  UaCH.49.d: "Abdal-Latif has received his fathers letter, and acted accordingly. The body is now en route to Samarkand and will arive in a year."
@@ -780,12 +779,13 @@
  
  
  uach_shah_rukhs_mausoleum_completed:0"Gawhar Shad Mausoleum"
- 
- uach_legit_to_defoff_lvl5:0"High legitimacy"
- uach_legit_to_defoff_lvl4:0"Average legitimacy"
- uach_legit_to_defoff_lvl3:0"Low legitimacy"
- uach_legit_to_defoff_lvl2:0"Abysmal legitimacy"
- uach_legit_to_defoff_lvl1:0"No legitimacy"
+ uach_legit_to_defoff_lvl5:0"Legitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\nOur current legitimacy grants us the following effects :\n\n§G+10%§! Siege ability\n§G+10%§! Defensiveness"
+ uach_legit_to_defoff_lvl4:0"Legitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\nOur current legitimacy grants us the following effects :\n\n§R-10%§! Siege ability\n§R-10%§! Defensiveness"
+ uach_legit_to_defoff_lvl3:0"Legitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\nOur current legitimacy grants us the following effects :\n\n§R-20%§! Siege ability\n§R-20%§! Defensiveness"
+ uach_legit_to_defoff_lvl2:0"Legitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\nOur current legitimacy grants us the following effects :\n\n§R-30%§! Siege ability\n§R-30%§! Defensiveness"
+ uach_legit_to_defoff_lvl1:0"Legitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\nOur current legitimacy grants us the following effects :\n\n§R-40%§! Siege ability\n§R-40%§! Defensiveness"
+ uach_legit_to_defoff_info:0"§RThis is in effect only during the Timurid Succession Crisis disaster§!\n\nLegitimacy directly influences the capability to attack our enemies and to defend our nation during the Timurid Succession Crisis, and the chance of nasty events. \n\n§GHigh§! legitimacy (over 80):\n§G+10%§! Siege ability\n§G+10%§! Defensiveness\n\n§YAverage legitimacy§! (60-80)\n§R-10%§! Siege ability\n§R-10%§! Defensiveness\n\n§YLow legitimacy§! (40-60)\n§R-20%§! Siege ability\n§R-20%§! Defensiveness\n\n§YAbyssmal legitimacy§! (20-40)\n§R-30%§! Siege ability\n§R-30%§! Defensiveness\n\n§RNo legitimacy§! (under 20)\n§R-40%§! Siege ability\n§R-40%§! Defensiveness "
+ uach_legit_to_defoff_call:0"[GetLegitToDefOff]
  
  lost_control_of_herat:0"Doesn't own or control Herat"
  lost_control_of_samarkand:0"Doesn't own or control Samarkand"
@@ -836,3 +836,14 @@
  UaCH.144.t:0"The Arghunids defeated"
  UaCH.144.d:0"The invaders have been repelled! After months of brutal fighting, we have finally retaken the last holdout of the Arghunid's armies. Our country is ready to rebuild, however the threat by the Timurid princes have not diminished at all. It is time to bring the fight to them."
  UaCH.144.a:0"They will pay for this!"
+ 
+ uach_gs_story_tt:0"The Empress-Dowager, §GGawhar Shad§! has eluded captivity in the tumultous time after the death of §GShah Rukh§!. Be assured, once she arrives to our capital, she will most likely try to usurp power for herself.\n\nHaving her in one of our cities grants us the following effects:\n§G+1§! Yearly Legitimacy\n§R+5%§! Liberty Desire of Subjects / Difficulty level DODO \n\nAdditionally, §GGawhar Shad§! may make demands to our ruler. Her wrath upoon failure would be... most unpleasant."
+ uach_gs_story_tt_1:0""
+ 
+ UaCH.147.t:0"The flight of Gawhar Shad"
+ UaCH.147.d:0"After the betrayal of §GAbdal-Latif§!, chaos erupted in the Timurid warcamp immediately. Most of §GShah Rukh's§! guard was killed immediately, and his servants and followers taken prisoner. However, §GGawhar Shad§! has managed to evade capture thanks to some loyalists, by disguising herself as a lowly campfollower. Her current whereabouts are unknown."
+ UaCH.147.a:0"She will emerge in due time."
+ 
+ UaCH.154.t:0 "The death of Gawhar Shad"
+ UaCH.154.d:0 "§GGawhar Shad§! has always been an ambitious woman. Since early young age, she actively worked behind the screens to meddle in politics, supporting her choice of heir's rather than his husbands. Old age did not really change this fact, but it seems that death has finally caught up with her. While she passed away peacefully, it will be incredibly hard to convince the princes about this."
+ UaCH.154.a:0 "May she find rest."
